feature：修改重定向地址

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: YEYI 361936738@qq.com
  * @Date: 2024-03-21 16:18:17
  * @LastEditors: YEYI 361936738@qq.com
- * @LastEditTime: 2024-03-21 16:21:12
+ * @LastEditTime: 2024-03-21 16:27:11
  * @FilePath: /trusteeship/index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -19,7 +19,13 @@
     <script type="module" src="/src/main.js"></script>
 
     <script>
-      window.location.replace('https://wlscjd.nailplate.cn/mobile?corpId=12607&isProperDingtalk=true')
+      // 重定向url
+      const REDIRECT_URL='https://wlscjd.nailplate.cn/mobile?corpId=12607&isProperDingtalk=true'
+
+
+
+
+      window.location.replace(REDIRECT_URL)
     </script>
   </body>
 </html>
